--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
+* {
+  box-sizing: border-box;
+}
 .App {
+  display: flex;
+  margin: 10px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App__wrapper{
+  border: 2px solid #12dbc7;
+  border-radius: 5px;
+  width: 15vw;
+  height: 20vh;
+  margin: 0 auto;
+  padding: 5px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.App__screen {
+  margin: 0 auto;
+  display: block;
+  width: 100%;
+  height: 50%;
+  background-color: #12dbc7;
+  border-radius: 5px;
+  position: relative;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App__screen span{
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 5vh;
+}
+.App__buttons{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
+  margin: 10px auto;
+  border: 1px solid #12dbc7;
+  width: 100%;
+  padding: 7px;
+  border-radius: 5px;
 }
+.App__buttons_but{
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App__buttons_but button{
+  width: 5vw;
+  height: 5vh;
+  border: none;
+  border-radius: 5px;
+  background-color: #12dbc7;
+  outline: none;
+}
+.limited{
+  color: red;
 }
