--- a/src/App.css
+++ b/src/App.css
@@ -24,11 +24,32 @@
   position: relative;
 }
 .App__screen span{
+  margin: 0 auto;
   position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 5vh;
+  top: 25%;
+  transform: translateX(-50%);
+  font-size: 20px;
+  width: 100%;
 }
+.App__screen.limited {
+  margin: 0 auto;
+  display: block;
+  width: 100%;
+  height: 50%;
+  background-color: #12dbc7;
+  border-radius: 5px;
+  position: relative;
+}
+.App__screen.limited span{
+  color: red;
+  margin: 0 auto;
+  position: absolute;
+  top: 25%;
+  transform: translateX(-50%);
+  font-size: 20px;
+  width: 100%;
+}
+
 .App__buttons{
   display: flex;
   justify-content: space-around;
@@ -48,7 +69,4 @@
   border-radius: 5px;
   background-color: #12dbc7;
   outline: none;
-}
-.limited{
-  color: red;
 }
